<resources>
    <string name="app_name">SoundBoard</string>
    <string name="fsh">F#</string>
    <string name="Csh">C#</string>
    <string name="Bfl">B♭</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="Dsh">D#</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="Gsh">G#</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="change_octave">Change Octave</string>
    <string name="scale_2">Scale 2</string>
    <string name="scale_1">Scale 1</string>

</resources>
